--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile_llh.png"
+  avatar           : "profile_linhao.png"
   name             : "Linhao Li"
   pronouns         : # example: "she/her"  
   bio              : "Undergraduate student at Chongqing University"
